# BMA_Benchmarck

./: .gitignore  README.md  TASKS.md  pyproject.toml
.github/workflows/: tests.yml
artifacts/blender_smoke/: result.blend  scene_snapshot.json  smoke_input.json  smoke_output.json
artifacts/mcp_smoke/: mcp_smoke_result.json
benchmark/: __init__.py  env.py
benchmark/agent/: __init__.py  artifact_layout.py  cli.py  config_loader.py  errors.py  execution_backend.py  models.py  prompts.py  runtime.py  tool_context.py  tool_executor.py  trace.py
benchmark/analysis/: __init__.py  agent_metrics.py  bundle_compare.py  cli.py  comparison.py  error_taxonomy.py  export.py  models.py  pass_type_rules.py  report_builder.py  report_bundle.py  report_bundle_validator.py  run_analysis.py  tool_metrics.py  trace_reader.py  validation_metrics.py
benchmark/blender/: __init__.py  cli.py  config.py  errors.py  launcher.py  models.py  paths.py
benchmark/experiments/: __init__.py  acceptance_policy.py  cli.py  e2e_runner.py  generator.py  manifests.py  matrix.py  matrix_policy.py  merge_runs.py  models.py  preflight.py  readiness.py  third_repetition.py
benchmark/mcp/: __init__.py  cli.py  config.py  connection_check.py  errors.py  execution_backend.py  models.py  profiles.py  server_adapter.py  socket_watchdog.py  tool_contract.py  tool_registry.py
benchmark/metrics/: __init__.py  aggregate.py  export.py  models.py  validation_metrics.py
benchmark/runner/: __init__.py  aggregation.py  artifact_manifest.py  batch_runner.py  cli.py  config_loader.py  controlled_errors.py  error_classification.py  errors.py  execution.py  experiment_runner.py  models.py  paths.py
benchmark/schemas/: task.schema.json
benchmark/tasks/: __init__.py  cli.py  loader.py  models.py  registry.py  tool_catalog.py  validator.py
benchmark/validation/: __init__.py  check_labels.py  checks.py  cli.py  errors.py  matcher.py  models.py  scene_validator.py  scoring.py  skip.py  snapshot_normalization.py
bma_benchmark/: __init__.py  __main__.py
bma_benchmark/reporting/: __init__.py
bma_benchmark/validation_audit/: __init__.py  cli.py  collector.py  models.py  registry.py  (+1 more)
configs/: example_experiment.yaml
docs/: agent_runtime.md  benchmark_reporting.md  blender_automation.md  blender_mcp_fork_patch.md  experiment_runner.md  experimental_matrix.md  mcp_headless.md  mcp_integration.md  scene_validation.md  task_format.md
exports/: result.glb
tests/: __init__.py  mcp_real_blender.py  run_evidence_pack_tests.py  test_agent_cli.py  test_agent_config_loader.py  test_agent_errors.py  test_agent_execution_backend.py  test_agent_metrics.py  test_agent_models.py  test_agent_prompts.py  test_agent_runtime.py  test_agent_strategy_interface.py  test_agent_tool_context.py  test_agent_tool_executor.py  test_agent_trace.py  test_analysis_cli.py  test_analysis_export.py  test_analysis_models.py  test_analysis_validation_metrics.py  test_anthropic_client.py  test_batch_runner.py  test_benchmark_stability.py  test_benchmark_stabilization.py  test_blender_cli.py  test_blender_collect_snapshot.py  test_blender_config.py  test_blender_entrypoint.py  test_blender_export_scene.py  test_blender_fixture_scene.py  test_blender_integration.py  test_blender_launcher.py  test_blender_models.py  test_blender_paths.py  test_blender_render_scene.py  test_blender_reset_scene.py  test_blender_save_scene.py  test_camera_validator.py  test_comparison.py  test_contact_sheet_real_images.py  test_direct_tool_calling_agent.py  (+98 more)
(+198 files in other folders)
