[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "blender-agent-benchmark"
version = "0.1.0"
description = "Benchmark task registry for evaluating AI agents in Blender via MCP."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pydantic",
    "pyyaml",
    "jsonschema",
]

[project.optional-dependencies]
test = [
    "pytest",
]
blender = [
    "numpy",
    "pillow",
]
dev = [
    "numpy",
    "pytest",
    "pillow",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
markers = [
    "blender: tests requiring Blender executable",
    "integration: integration tests",
    "mcp: tests requiring a running MCP server / Blender with blender-mcp addon",
]

[tool.setuptools.packages.find]
include = ["benchmark*"]
